--- a/config/minimalist-templates/EN.yaml
+++ b/config/minimalist-templates/EN.yaml
@@ -24,3 +24,4 @@ ulm_language_variables:
     ulm_alarm_disarmed: "Disarmed"
     ulm_alarm_arming: "Arming"
     ulm_alarm_triggered: "TRIGGERED"
+    ulm_paused: "Paused"
