Add popup as tap action to the light card

--- a/config/minimalist-templates/button_card_templates.yaml
+++ b/config/minimalist-templates/button_card_templates.yaml
@@ -485,6 +485,7 @@ card_light_slider:
         template:
           - "icon_info"
           - "yellow_slider"
+          - "popup_light"
         entity: "[[[ return entity.entity_id ]]]"
         label: >-
           [[[
