--- a/custom_cards/_custom_card_room/custom_card_room.yaml
+++ b/custom_cards/_custom_card_room/custom_card_room.yaml
@@ -19,19 +19,13 @@ card_room:
   aspect_ratio: "1/1"
   label: |-
     [[[
-      var temperature = entity.attributes.room_temperature;
-      var temperature_2 = entity.attributes.temperature;
-      var temperature_3 = entity.state;
-      if (temperature != null){
-        return temperature + '°C'
-      }else if (temperature_2 != null){
-        return temperature_2 + '°C'
-      }else if (temperature_3 == "unavailable"){
-        return '-' + '°C'
-      }else if (temperature_3 != null){
-        return temperature_3 + '°C'
+      if (entity.state !== 'unavailable') {
+        if (entity.attributes.device_class === 'temperature') {
+          return entity.state + '°C';
+        }
+        return (entity.attributes.current_temperature || entity.attributes.temperature) + '°C';
       } else {
-        return '-' + '°C'
+        return variables.ulm_unavailable;
       }
     ]]]
   state:
@@ -55,6 +49,28 @@ card_room:
                   return "rgba(var(--color-red),1)";
                 ]]]
       value: "unavailable"
+    - operator: "template"
+      value: "[[[return entity.state == 'heat']]]"
+      styles:
+        icon:
+          - color: "rgba(var(--color-red),1)"
+        img_cell:
+          - background-color: "rgba(var(--color-red),0.2)"
+        name:
+          - color: "rgba(var(--color-red-text),1)"
+        label:
+          - color: "rgba(var(--color-red-text),1)"
+    - operator: "template"
+      value: "[[[return entity.state == 'cool']]]"
+      styles:
+        icon:
+          - color: "rgba(var(--color-blue),1)"
+        img_cell:
+          - background-color: "rgba(var(--color-blue),0.2)"
+        name:
+          - color: "rgba(var(--color-blue-text),1)"
+        label:
+          - color: "rgba(var(--color-blue-text),1)"
   styles:
     card:
       - border-radius: "20px"
