Change entity unavailable value

--- a/custom_cards/_custom_card_room/custom_card_room.yaml
+++ b/custom_cards/_custom_card_room/custom_card_room.yaml
@@ -25,7 +25,7 @@ card_room:
         }
         return (entity.attributes.current_temperature || entity.attributes.temperature) + '°C';
       } else {
-        return variables.ulm_unavailable;
+        return '-' + '°C';
       }
     ]]]
   state:
